--- a/front/src/components/pages/Homepage/Homepage.module.scss
+++ b/front/src/components/pages/Homepage/Homepage.module.scss
@@ -1,4 +1,5 @@
 @import '../../../styles/settings.scss';
+@import '../../../styles/mixins';
 
 .main_wrapper {
 	height: 100vh;
@@ -12,6 +13,10 @@
 	display: flex;
 	justify-content: center;
 	padding-bottom: 50px;
+
+	@include md {
+		flex-direction: column;
+	}
 }
 
 .lottie_wrapper {
@@ -19,14 +24,22 @@
 	flex-direction: column;
 	justify-content: center;
 	margin-right: 50px;
+	padding-top: 40px;
 }
 
-.lottie_wrapper img {
+.text_wrapper {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+.text_wrapper img {
 	width: 60vw;
-	margin-left: 18vw;
 	padding-top: 30px;
 }
 
 .text_wrapper p {
 	font-size: 1.6 * $base-size;
+	text-align: center;
 }
